--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             &nbsp;
             <span> FAQ </span>
             &nbsp;
-            <span> Bookings </span>
+            <span> Booking </span>
 
         </div>
         <div class="icon">
